Fix white-space wrapping in InputControl label.

--- a/js/src/components/app-input-control/index.scss
+++ b/js/src/components/app-input-control/index.scss
@@ -2,5 +2,6 @@
 	// hack with !important to override the specificity in @wordpress/components.
 	label.components-input-control__label {
 		color: #757575 !important;
+		white-space: normal !important;
 	}
 }
